[tool.poetry]
name = "spark-v-polars"
version = "0.1.0"
description = ""
authors = ["Marc Molina <marcmolinavdb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^17.0.0"


[tool.poetry.group.dev.dependencies]
numpy = "^2.1.0"
spark = "^0.2.1"
pyspark = "^3.5.2"
pandas = "^2.2.2"
polars = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
